finished website with responsive

--- a/index.html
+++ b/index.html
@@ -106,7 +106,73 @@
             </div>
         </section>
 
-        
+        <section class="game-types">
+            <div class="game-item">
+                <img src="images/Rectangle 11.png" alt="">
+                <p>Action Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 16.png" alt="">
+                <p>Role Palying Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 17.png" alt="">
+                <p>Music & Audio Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 18.png" alt="">
+                <p>Puzzle Games</p>
+            </div>
+            <div class="game-item">
+                <img src="images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
+            </div>
+        </section>
+        <!-- footer section -->
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="logo">
+                    <img src="images/Frame.png" alt="">
+                    <h3><span>P</span>okoloko <span>G</span>amers</h3>
+                </div>
+                <div class="footer-options">
+                    <p class="secondary-font">Our Story</p>
+                    <p class="secondary-font">Games</p>
+                    <p class="secondary-font">Web Games</p>
+                    <p class="secondary-font">Career</p>
+                    <p class="secondary-font">Support</p>
+                    <p class="secondary-font">My Account</p>
+                </div>
+                <div class="social-icons">
+                    <img src="icons/twitter.png" alt="">
+                    <img src="icons/linkedin 1.png" alt="">
+                    <img src="icons/instagram 1.png" alt="">
+                </div>
+                <div class="lower-text">
+                    <p class="secondary-font"><small>Terms and Conditions</small></p>
+                    <p class="secondary-font"><small>Privacy Policy</small></p>
+                    <p class="secondary-font"><small>Cookie Policy</small></p>
+                    <p class="secondary-font"><small>Privacy Settings</small></p>
+                </div>
+                <p class="secondary-font"><small>Play Games &commat; Gamer &commat; 2000-2023 Gamer Bangladesh</small></p>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
