added hover effect on funny videos

--- a/index.html
+++ b/index.html
@@ -74,18 +74,34 @@
             <div class="funny-videos-container">
                 <div class="card">
                     <img src="images/Rectangle 4.png" alt="">
+                    <div class="play-button">
+                        <img src="icons/white-play-button.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
                     <p class="secondary-font">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle 5.png" alt="">
+                    <div class="play-button">
+                        <img src="icons/white-play-button.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
                     <p class="secondary-font">Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle 6.png" alt="">
+                    <div class="play-button">
+                        <img src="icons/white-play-button.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
                     <p class="secondary-font">Breaking game records like OG</p>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle 7.png" alt="">
+                    <div class="play-button">
+                        <img src="icons/white-play-button.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
                     <p class="secondary-font">Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
